<resources>
    <string name="app_name">KnowMyPlayer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="info">Info</string>
    <string name="about">About</string>
    <string name="position">Position</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="team">Team</string>
    <string name="number">Number</string>
    <string name="enter_player_name">Enter Player Name...</string>
    <string name="finance_and_manager">Finance &amp; Manager</string>
    <string name="agent">Agent</string>
    <string name="wage">Wage</string>
    <string name="kit">Kit</string>
    <string name="enter_player_name_to_search">Please enter your player name above. </string>
    <string name="invalid_player_name">Invalid Player Name</string>
    <string name="loading_player_information">Loading Player Information...</string>

</resources>